--- a/SSToDo.csproj
+++ b/SSToDo.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>73c7cc91-77b2-4b4a-bab1-f3240400089b</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
